Reformat project structure

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,13 +2,12 @@ cmake_minimum_required(VERSION 3.29)
 project(parallel2024_task1)
 
 set(CMAKE_CXX_STANDARD 11)
-
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp")
+enable_testing()
 
+set(TOPLEVEL_INCLUDE_DIR ${PROJECT_SOURCE_DIR})
 
 add_executable(parallel2024_task1 main.cpp
-        mathfunc.cpp
-        mathfunc.h
         csr.cpp
         csr.h
         input.cpp
@@ -16,14 +15,7 @@ add_executable(parallel2024_task1 main.cpp
         solvers.cpp
         solvers.h)
 
+add_subdirectory(Tests)
+add_subdirectory(Ops)
 
-#testing binary
-add_executable(math_test tests.cpp)
-#target_link_libraries(cpp_test PRIVATE sum_integers)
-
-enable_testing()
-
-add_test(
-        NAME math_test
-        COMMAND $<TARGET_FILE:math_test>
-)
+target_link_libraries(parallel2024_task1 MathFunc)
