--- a/Tests/CMakeLists.txt
+++ b/Tests/CMakeLists.txt
@@ -1,13 +1,25 @@
-add_executable(MathTests tests.cpp)
+add_executable(MathTest DotTest.cpp)
+add_executable(SolveTest SolveTest.cpp
+        ${TOPLEVEL_INCLUDE_DIR}/solvers.h ${TOPLEVEL_INCLUDE_DIR}/solvers.cpp
+        ${TOPLEVEL_INCLUDE_DIR}/csr.h ${TOPLEVEL_INCLUDE_DIR}/csr.cpp
+        ${TOPLEVEL_INCLUDE_DIR}/input.h ${TOPLEVEL_INCLUDE_DIR}/input.cpp)
 
-add_dependencies(MathTests MathFunc)
+add_dependencies(MathTest MathFunc)
+add_dependencies(SolveTest MathFunc)
 
-target_link_libraries(MathTests PRIVATE MathFunc)
+target_link_libraries(MathTest PRIVATE MathFunc)
+target_link_libraries(SolveTest PRIVATE MathFunc)
 
-set_target_properties(MathTests PROPERTIES FOLDER "Tests")
+set_target_properties(MathTest PROPERTIES FOLDER "Tests")
+set_target_properties(SolveTest PROPERTIES FOLDER "Tests")
 
 
 add_test(
-        NAME MathTest1
-        COMMAND $<TARGET_FILE:MathTests>
+        NAME Test1
+        COMMAND $<TARGET_FILE:MathTest>
+)
+
+add_test(
+        NAME Test2
+        COMMAND $<TARGET_FILE:SolveTest>
 )
