Add argument parsing, file output

--- a/Solver/CMakeLists.txt
+++ b/Solver/CMakeLists.txt
@@ -1,10 +1,10 @@
 add_subdirectory(Kernels)
 
-add_executable(Solver main.cpp
+add_executable(CGSolver main.cpp
         csr.cpp
         csr.h
         solvers.cpp
         solvers.h)
 
-add_dependencies(Solver Utilities MathFunc)
-target_link_libraries(Solver PUBLIC MathFunc Utilities)
+add_dependencies(CGSolver Utilities MathFunc)
+target_link_libraries(CGSolver PUBLIC MathFunc Utilities)
