Modify first dot test

--- a/Tests/CMakeLists.txt
+++ b/Tests/CMakeLists.txt
@@ -1,25 +1,25 @@
-add_executable(MathTest DotTest.cpp)
-add_executable(SolveTest SolveTest.cpp
-        ${TOPLEVEL_INCLUDE_DIR}/solvers.h ${TOPLEVEL_INCLUDE_DIR}/solvers.cpp
-        ${TOPLEVEL_INCLUDE_DIR}/csr.h ${TOPLEVEL_INCLUDE_DIR}/csr.cpp
-        ${TOPLEVEL_INCLUDE_DIR}/Utilities/input.h ${TOPLEVEL_INCLUDE_DIR}/Utilities/input.cpp)
+add_executable(DotTest DotCorrectnessTest.cpp)
+#add_executable(SolveTest SolveTest.cpp
+#        ${PROJECT_SOURCE_DIR}/Solver/solvers.h ${TOPLEVEL_INCLUDE_DIR}/solvers.cpp
+#        ${TOPLEVEL_INCLUDE_DIR}/csr.h ${TOPLEVEL_INCLUDE_DIR}/csr.cpp
+#        ${TOPLEVEL_INCLUDE_DIR}/Utilities/input.h ${TOPLEVEL_INCLUDE_DIR}/Utilities/input.cpp)
 
-add_dependencies(MathTest MathFunc)
-add_dependencies(SolveTest MathFunc)
+add_dependencies(DotTest MathFunc)
+#add_dependencies(SolveTest MathFunc)
 
-target_link_libraries(MathTest PRIVATE MathFunc)
-target_link_libraries(SolveTest PRIVATE MathFunc)
+target_link_libraries(DotTest PRIVATE MathFunc)
+#target_link_libraries(SolveTest PRIVATE MathFunc)
 
-set_target_properties(MathTest PROPERTIES FOLDER "Tests")
-set_target_properties(SolveTest PROPERTIES FOLDER "Tests")
+set_target_properties(DotTest PROPERTIES FOLDER "Tests")
+#set_target_properties(SolveTest PROPERTIES FOLDER "Tests")
 
-
-add_test(
-        NAME Test1
-        COMMAND $<TARGET_FILE:MathTest>
-)
 
 add_test(
-        NAME Test2
-        COMMAND $<TARGET_FILE:SolveTest>
+        NAME DotCorrectnessTest
+        COMMAND $<TARGET_FILE:DotTest>
 )
+
+#add_test(
+#        NAME Test2
+#        COMMAND $<TARGET_FILE:SolveTest>
+#)
