Add CGSolver measurements

--- a/Tests/Time/CMakeLists.txt
+++ b/Tests/Time/CMakeLists.txt
@@ -1,14 +1,20 @@
-set(MEASURE_SOURCES
-    DotMeasure.cpp
-    AXpYMeasure.cpp
-    SpMVMeasure.cpp
+set(MEASURES
+    DotMeasure
+    AXpYMeasure
+    SpMVMeasure
+    CGSolverMeasure
 )
 
-foreach (MEASURE_SOURCE ${MEASURE_SOURCES})
-    cmake_path(GET MEASURE_SOURCE STEM MEASURE)
+foreach (MEASURE ${MEASURES})
+#    cmake_path(GET MEASURE_SOURCE STEM MEASURE)
+    set(MEASURE_SOURCE ${MEASURE}.cpp)
 
     if (${MEASURE} STREQUAL "SpMVMeasure")
         add_executable(${MEASURE} ${MEASURE_SOURCE} ${PROJECT_SOURCE_DIR}/Solver/csr.cpp)
+        add_dependencies(${MEASURE} Utilities)
+        target_link_libraries(${MEASURE} PUBLIC Utilities)
+    elseif (${MEASURE} STREQUAL "CGSolverMeasure")
+        add_executable(${MEASURE} ${MEASURE_SOURCE} ${PROJECT_SOURCE_DIR}/Solver/csr.cpp ${PROJECT_SOURCE_DIR}/Solver/solvers.cpp)
         add_dependencies(${MEASURE} Utilities)
         target_link_libraries(${MEASURE} PUBLIC Utilities)
     else ()
