Add new folder for compiled libs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,8 @@ set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp")
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/bin" CACHE INTERNAL "Where to place executables")
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/lib" CACHE INTERNAL "Where to place libraries")
+set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/lib" CACHE INTERNAL "Where to place libraries")
 
 option(ENABLE_TESTS "Enable automatic testing" ON)
 if (ENABLE_TESTS)
@@ -15,7 +17,6 @@ endif ()
 
 option(USE_DEBUG_MODE "Use debug tools" OFF)
 if (USE_DEBUG_MODE)
-    message("LULW")
     add_definitions(-DUSE_DEBUG_MODE)
 endif ()
 
