--- a/Utilities/CMakeLists.txt
+++ b/Utilities/CMakeLists.txt
@@ -1,4 +1,8 @@
-add_library(Utilities
+if (USE_MPI)
+    add_library(Coms SHARED coms.cpp coms.h)
+endif ()
+
+add_library(IOs SHARED
         input.cpp
         input.h
         argparse.h)
