Disable tests when MPI is enabled and configure MPI settings

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,10 +9,6 @@ set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/lib" CACHE INTERNAL "Whe
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/lib" CACHE INTERNAL "Where to place libraries")
 
 option(ENABLE_TESTS "Enable automatic testing" ON)
-if (ENABLE_TESTS)
-    enable_testing()
-    add_subdirectory(Tests)
-endif ()
 
 
 option(USE_DEBUG_MODE "Use debug tools" OFF)
@@ -23,9 +19,17 @@ endif ()
 option(USE_MPI "Use MPI" OFF)
 if (USE_MPI)
     add_definitions(-DUSE_MPI)
+    set(ENABLE_TESTS OFF)
     set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/bin_mpi" CACHE INTERNAL "Where to place executables")
     set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/lib_mpi" CACHE INTERNAL "Where to place libraries")
     set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/lib_mpi" CACHE INTERNAL "Where to place libraries")
+    find_package(MPI REQUIRED)
+    link_libraries(MPI::MPI_CXX)
+endif ()
+
+if (ENABLE_TESTS)
+    enable_testing()
+    add_subdirectory(Tests)
 endif ()
 
 
