Enable CGSolverMeasure in Time tests

--- a/Tests/Time/CMakeLists.txt
+++ b/Tests/Time/CMakeLists.txt
@@ -2,7 +2,7 @@ set(MEASURES
     DotMeasure
     AXpYMeasure
     SpMVMeasure
-#    CGSolverMeasure
+    CGSolverMeasure
 )
 
 foreach (MEASURE ${MEASURES})
