Conditionally link Coms library based on USE_MPI in Time tests

--- a/Tests/Time/CMakeLists.txt
+++ b/Tests/Time/CMakeLists.txt
@@ -12,11 +12,17 @@ foreach (MEASURE ${MEASURES})
     if (${MEASURE} STREQUAL "SpMVMeasure")
         add_executable(${MEASURE} ${MEASURE_SOURCE} ${PROJECT_SOURCE_DIR}/Solver/csr.cpp)
         add_dependencies(${MEASURE} IOs)
-        target_link_libraries(${MEASURE} PUBLIC IOs Coms)
+        target_link_libraries(${MEASURE} PUBLIC IOs)
+        if (USE_MPI)
+            target_link_libraries(${MEASURE} PUBLIC Coms)
+        endif ()
     elseif (${MEASURE} STREQUAL "CGSolverMeasure")
         add_executable(${MEASURE} ${MEASURE_SOURCE} ${PROJECT_SOURCE_DIR}/Solver/csr.cpp ${PROJECT_SOURCE_DIR}/Solver/solvers.cpp)
         add_dependencies(${MEASURE} IOs)
-        target_link_libraries(${MEASURE} PUBLIC IOs Coms)
+        target_link_libraries(${MEASURE} PUBLIC IOs)
+        if (USE_MPI)
+            target_link_libraries(${MEASURE} PUBLIC Coms)
+        endif ()
     else ()
         add_executable(${MEASURE} ${MEASURE_SOURCE})
     endif ()
