Add new test executables for CSR and data handling, improve CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,17 +8,20 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/bin" CACHE INTERNAL "Whe
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/lib" CACHE INTERNAL "Where to place libraries")
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/lib" CACHE INTERNAL "Where to place libraries")
 
+set(TOPLEVEL_INCLUDE_DIR ${PROJECT_SOURCE_DIR})
+add_compile_definitions(PROJECT_SOURCE_DIR=\"${PROJECT_SOURCE_DIR}\")
+
 option(ENABLE_TESTS "Enable automatic testing" ON)
 
 
 option(USE_DEBUG_MODE "Use debug tools" OFF)
 if (USE_DEBUG_MODE)
-    add_definitions(-DUSE_DEBUG_MODE)
+    add_compile_definitions(USE_DEBUG_MODE)
 endif ()
 
 option(USE_MPI "Use MPI" OFF)
 if (USE_MPI)
-    add_definitions(-DUSE_MPI)
+    add_compile_definitions(USE_MPI)
 #    set(ENABLE_TESTS OFF)
     set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/bin_mpi" CACHE INTERNAL "Where to place executables")
     set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/lib_mpi" CACHE INTERNAL "Where to place libraries")
@@ -32,9 +35,6 @@ if (ENABLE_TESTS)
     enable_testing()
     add_subdirectory(Tests)
 endif ()
-
-
-set(TOPLEVEL_INCLUDE_DIR ${PROJECT_SOURCE_DIR})
 
 add_subdirectory(Utilities)
 add_subdirectory(Solver)
