Update CMakeLists.txt for output directories and add logging functionality

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,12 +4,13 @@ project(parallel2024_task1)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp")
 
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/bin" CACHE INTERNAL "Where to place executables")
-set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/lib" CACHE INTERNAL "Where to place libraries")
-set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/lib" CACHE INTERNAL "Where to place libraries")
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin" CACHE INTERNAL "Where to place executables")
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib" CACHE INTERNAL "Where to place libraries")
+file(MAKE_DIRECTORY "${CMAKE_BINARY_DIR}/log")      # Where to place logs
 
-set(TOPLEVEL_INCLUDE_DIR ${PROJECT_SOURCE_DIR})
+#set(TOPLEVEL_INCLUDE_DIR ${PROJECT_SOURCE_DIR})
 add_compile_definitions(PROJECT_SOURCE_DIR=\"${PROJECT_SOURCE_DIR}\")
+add_compile_definitions(LOG_DIR=\"${PROJECT_BINARY_DIR}/log\")
 
 option(ENABLE_TESTS "Enable automatic testing" ON)
 option(USE_DEBUG_MODE "Use debug tools" OFF)
@@ -22,9 +23,6 @@ endif ()
 if (USE_MPI)
     add_compile_definitions(USE_MPI)
 #    set(ENABLE_TESTS OFF)
-    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/bin_mpi" CACHE INTERNAL "Where to place executables")
-    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/lib_mpi" CACHE INTERNAL "Where to place libraries")
-    set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/lib_mpi" CACHE INTERNAL "Where to place libraries")
     find_package(MPI REQUIRED)
     link_libraries(MPI::MPI_CXX)
 #    message(${MPI_CXX_VERSION_MAJOR})
