--- a/Solver/Kernels/CMakeLists.txt
+++ b/Solver/Kernels/CMakeLists.txt
@@ -2,6 +2,4 @@ add_library(MathFunc SHARED
         mathfunc.cpp
         mathfunc.h)
 
-target_include_directories(MathFunc PUBLIC ${TOPLEVEL_INCLUDE_DIR})
-
-
+target_include_directories(MathFunc PUBLIC ${PROJECT_SOURCE_DIR})
