Fix CMakeLists.txt to conditionally add Time subdirectory based on USE_MPI

--- a/Tests/CMakeLists.txt
+++ b/Tests/CMakeLists.txt
@@ -50,6 +50,8 @@ if (USE_CUDA)
         target_compile_options(${TEST} PRIVATE $<$<COMPILE_LANGUAGE:CUDA>: -Xcompiler=-fopenmp>)
         target_compile_features(${TEST} PRIVATE cxx_std_17 cuda_std_17)
     endforeach ()
+endif ()
 
+if (NOT USE_MPI)
     add_subdirectory(Time)
 endif ()
