Update CGSolver CMake configuration for CUDA support

--- a/Solver/CMakeLists.txt
+++ b/Solver/CMakeLists.txt
@@ -1,14 +1,25 @@
 add_subdirectory(Kernels)
 
-add_executable(CGSolver main.cpp
-        csr.cpp
-        csr.h
-        solvers.cpp
-        solvers.h)
+if (USE_CUDA)
+    add_executable(CGSolver main.cpp
+            csr.cpp
+            csr.h
+            solvers.cu
+            solvers.cuh)
 
-add_dependencies(CGSolver IOs MathFunc)
-target_link_libraries(CGSolver PUBLIC IOs MathFunc)
-if (USE_MPI)
-    add_dependencies(CGSolver Coms)
-    target_link_libraries(CGSolver PUBLIC Coms)
-endif ()
+    add_dependencies(CGSolver IOs MathFuncCUDA)
+    target_link_libraries(CGSolver PUBLIC IOs MathFuncCUDA)
+else ()
+    add_executable(CGSolver main.cpp
+            csr.cpp
+            csr.h
+            solvers.cpp
+            solvers.h)
+
+    add_dependencies(CGSolver IOs MathFunc)
+    target_link_libraries(CGSolver PUBLIC IOs MathFunc)
+    if (USE_MPI)
+        add_dependencies(CGSolver Coms)
+        target_link_libraries(CGSolver PUBLIC Coms)
+    endif ()
+endif()
